Put href links to images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="/car.jpg" alt="Scenery" height="250px" width="480px">
+            <img src="images/car.jpg" alt="Scenery" height="250px" width="480px">
         </div>
     </div>
 
@@ -33,20 +33,20 @@
         <div class="title">Reviews</div>
         <div class="reviews">
             <div class="review">
-                <img src="/gojo.jpg" height="150px" width="150px">
+                <img src="images/gojo.jpg" height="150px" width="150px">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quas? </p>
             </div>
             <div class="review">
-                <img src="/gojo.jpg" height="150px" width="150px">
+                <img src="images/gojo.jpg" height="150px" width="150px">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quas? </p>
             </div>
             
             <div class="review">
-                <img src="/gojo.jpg" height="150px" width="150px">
+                <img src="images/gojo.jpg" height="150px" width="150px">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quas? </p>
             </div>
             <div class="review">
-                <img src="/gojo.jpg" height="150px" width="150px">
+                <img src="images/gojo.jpg" height="150px" width="150px">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quas? </p>
             </div>
         </div>
